--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
+[submodule "bundle/rspec"]
+	path = bundle/rspec
+	url = https://github.com/Keithbsmiley/rspec.vim.git
