--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "bundle/vim-javascript"]
 	path = bundle/vim-javascript
 	url = git://github.com/pangloss/vim-javascript.git
+[submodule "bundle/ag"]
+	path = bundle/ag
+	url = https://github.com/epmatsw/ag.vim.git
