--- a/.gitmodules
+++ b/.gitmodules
@@ -73,8 +73,8 @@
 [submodule "bundle/vim-slim"]
 	path = bundle/vim-slim
 	url = https://github.com/slim-template/vim-slim.git
-[submodule "ember.vim"]
-	path = ember.vim
+[submodule "bundle/ember.vim"]
+	path = bundle/ember.vim
 	url = https://github.com/dsawardekar/ember.vim.git
 [submodule "bundle/vim-jsx"]
 	path = bundle/vim-jsx
